Salesforce/ISW Telegram Bot/force-app/main/default/objects/Student__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <label>Alias</label>
    <length>64</length>
    <type>Text</type>
</CustomField>