Salesforce/ISW Telegram Bot/force-app/main/default/objects/Student__c/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <label>Counter</label>
    <type>AutoNumber</type>
</CustomField>