Salesforce/ISW Telegram Bot/force-app/main/default/objects/Student__c/fields/Telegram_Username__c.field-meta.xml
<CustomField>
    <fullName>Telegram_Username__c</fullName>
    <label>Telegram Username</label>
    <length>32</length>
    <type>Text</type>
</CustomField>